# ga-cli

./: .gitignore  README.md  pyproject.toml
src/ga_cli/: config.py  main.py
src/generalanalysis/: main.py
